objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ASI_LUX_Consumer_Grade__c</fullName>
        <label>Consumer Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+65</fullName>
                </value>
                <value>
                    <fullName>+852</fullName>
                </value>
                <value>
                    <fullName>+853</fullName>
                </value>
                <value>
                    <fullName>+86</fullName>
                </value>
                <value>
                    <fullName>+886</fullName>
                </value>
                <value>
                    <fullName>+60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_EDM_Opt_in_Direct_Mail__c</fullName>
        <label>Opt-in Direct Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_EDM_Opt_in_Email__c</fullName>
        <label>Opt-in Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_EDM_Opt_in_Phone__c</fullName>
        <label>Opt-in Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_EDM_Opt_in_SMS__c</fullName>
        <label>Opt-in SMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Email_Business__c</fullName>
        <label>Email (Business)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Email_Other__c</fullName>
        <label>Email (Secondary)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Favorite_topic__c</fullName>
        <label>Favorite topic</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Financial_Status_Millions__c</fullName>
        <label>Financial Status (Millions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_First_Name_Kanji__c</fullName>
        <label>First Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_First_Name_Katakana__c</fullName>
        <label>First Name (Katakana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Frequent_Travel_Destination__c</fullName>
        <label>Frequent Travel Destination</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>E.Europe</fullName>
                </value>
                <value>
                    <fullName>Exotic Islands</fullName>
                </value>
                <value>
                    <fullName>Mediterranean</fullName>
                </value>
                <value>
                    <fullName>NE Asia</fullName>
                </value>
                <value>
                    <fullName>Nordic</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>S Europe</fullName>
                </value>
                <value>
                    <fullName>SE Asia</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>W.Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Friend_1__c</fullName>
        <label>Friend 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Friend_2__c</fullName>
        <label>Friend 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Friend_3__c</fullName>
        <label>Friend 3</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Industry_Other__c</fullName>
        <label>Industry (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Interested_Alcohol_knowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Alcohol related knowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Last_Name_Kanji__c</fullName>
        <label>Last Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Last_Name_Katakana__c</fullName>
        <label>Last Name (Katakana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Member_s_Entertainment_Record__c</fullName>
        <label>Member&apos;s Entertainment Record</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Members_Of_Any_Clubs__c</fullName>
        <label>Members Of Any Clubs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Membership_Category_Other__c</fullName>
        <label>Membership Category (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Membership_Category__c</fullName>
        <label>Membership Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affluent</fullName>
                </value>
                <value>
                    <fullName>Celebrities</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Trade Partners</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>HNWI</fullName>
                </value>
                <value>
                    <fullName>Art Related</fullName>
                </value>
                <value>
                    <fullName>Leisure Ladies</fullName>
                </value>
                <value>
                    <fullName>Partner of Leisure Lady</fullName>
                </value>
                <value>
                    <fullName>Media Related</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Occasion_at_First_Meeting__c</fullName>
        <label>Occasion at First Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>Global / Regional brand events</fullName>
                </value>
                <value>
                    <fullName>Local brand events</fullName>
                </value>
                <value>
                    <fullName>Le Cercle events</fullName>
                </value>
                <value>
                    <fullName>Partnership/co-sponsored events</fullName>
                </value>
                <value>
                    <fullName>Champagne Event -Old</fullName>
                </value>
                <value>
                    <fullName>Champagne Event -New</fullName>
                </value>
                <value>
                    <fullName>Others (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Occupation_Title__c</fullName>
        <label>Occupation Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Employed / Freelance</fullName>
                </value>
                <value>
                    <fullName>Company Employee</fullName>
                </value>
                <value>
                    <fullName>Company CEO / Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Government Employee</fullName>
                </value>
                <value>
                    <fullName>House Wife</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Other_Interest__c</fullName>
        <label>Other Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Other_Luxury_Brand__c</fullName>
        <label>Other Luxury Brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Other_Occasion__c</fullName>
        <label>Other Occasion</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Personal_collection__c</fullName>
        <label>Personal collection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Brand_1_Other__c</fullName>
        <label>Preferred Alcohol Brand 1 (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Brand_1__c</fullName>
        <label>Preferred Alcohol Brand 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Arbeg</fullName>
                </value>
                <value>
                    <fullName>Ballantine</fullName>
                </value>
                <value>
                    <fullName>Balvenie</fullName>
                </value>
                <value>
                    <fullName>Bruichladdich</fullName>
                </value>
                <value>
                    <fullName>Bunnahabhain</fullName>
                </value>
                <value>
                    <fullName>Camus</fullName>
                </value>
                <value>
                    <fullName>Chieftain</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Courvoisier</fullName>
                </value>
                <value>
                    <fullName>Dom Perignon</fullName>
                </value>
                <value>
                    <fullName>Famous Grouse</fullName>
                </value>
                <value>
                    <fullName>G.H. MUMM</fullName>
                </value>
                <value>
                    <fullName>Glenfiddich</fullName>
                </value>
                <value>
                    <fullName>Glenmorangie</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Hennessy</fullName>
                </value>
                <value>
                    <fullName>Highland Park</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker &amp; Son</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker Blue Label</fullName>
                </value>
                <value>
                    <fullName>Krug</fullName>
                </value>
                <value>
                    <fullName>Louis Roederer</fullName>
                </value>
                <value>
                    <fullName>Louis XIII</fullName>
                </value>
                <value>
                    <fullName>Macallan</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Moet Chandon</fullName>
                </value>
                <value>
                    <fullName>Otard</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet</fullName>
                </value>
                <value>
                    <fullName>Remy Martin</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Brand_2_Other__c</fullName>
        <label>Preferred Alcohol Brand 2 (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Brand_2__c</fullName>
        <label>Preferred Alcohol Brand 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Arbeg</fullName>
                </value>
                <value>
                    <fullName>Ballantine</fullName>
                </value>
                <value>
                    <fullName>Balvenie</fullName>
                </value>
                <value>
                    <fullName>Bruichladdich</fullName>
                </value>
                <value>
                    <fullName>Bunnahabhain</fullName>
                </value>
                <value>
                    <fullName>Camus</fullName>
                </value>
                <value>
                    <fullName>Chieftain</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Courvoisier</fullName>
                </value>
                <value>
                    <fullName>Dom Perignon</fullName>
                </value>
                <value>
                    <fullName>Famous Grouse</fullName>
                </value>
                <value>
                    <fullName>G.H. MUMM</fullName>
                </value>
                <value>
                    <fullName>Glenfiddich</fullName>
                </value>
                <value>
                    <fullName>Glenmorangie</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Hennessy</fullName>
                </value>
                <value>
                    <fullName>Highland Park</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker &amp; Son</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker Blue Label</fullName>
                </value>
                <value>
                    <fullName>Krug</fullName>
                </value>
                <value>
                    <fullName>Louis Roederer</fullName>
                </value>
                <value>
                    <fullName>Louis XIII</fullName>
                </value>
                <value>
                    <fullName>Macallan</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Moet Chandon</fullName>
                </value>
                <value>
                    <fullName>Otard</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet</fullName>
                </value>
                <value>
                    <fullName>Remy Martin</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Category_1__c</fullName>
        <label>Preferred Alcohol Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whisky</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Category_2__c</fullName>
        <label>Preferred Alcohol Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whisky</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Sub_Brand_1__c</fullName>
        <label>Preferred Alcohol Sub-Brand 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 12 Years</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 18 Years</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 25 Years</fullName>
                </value>
                <value>
                    <fullName>Royal Salute 21 Years</fullName>
                </value>
                <value>
                    <fullName>Royal Salute 62 Guns Salute</fullName>
                </value>
                <value>
                    <fullName>Royal Salute 38 Stone of Destiny</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 12 Years</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 15 Years</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 18 Years</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 25 Years</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker Black Label</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker Blue Label</fullName>
                </value>
                <value>
                    <fullName>Martell VSOP</fullName>
                </value>
                <value>
                    <fullName>Martell Cordon Bleu</fullName>
                </value>
                <value>
                    <fullName>Martell XO</fullName>
                </value>
                <value>
                    <fullName>Martell Chanteloup Perspective</fullName>
                </value>
                <value>
                    <fullName>Martell Creation Grand Extra</fullName>
                </value>
                <value>
                    <fullName>Martell Cohiba</fullName>
                </value>
                <value>
                    <fullName>L&apos;or De Jean Martell</fullName>
                </value>
                <value>
                    <fullName>Hennessy VSOP</fullName>
                </value>
                <value>
                    <fullName>Hennessy XO</fullName>
                </value>
                <value>
                    <fullName>Hennessy Prive</fullName>
                </value>
                <value>
                    <fullName>Richard Hennessy</fullName>
                </value>
                <value>
                    <fullName>Remy-Martin VSOP</fullName>
                </value>
                <value>
                    <fullName>Remy-Martin XO</fullName>
                </value>
                <value>
                    <fullName>Remy-Martin Louis XIII</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet</fullName>
                </value>
                <value>
                    <fullName>GH Mumms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Sub_Brand_2__c</fullName>
        <label>Preferred Alcohol Sub-Brand 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 12 Years</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 18 Years</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal 25 Years</fullName>
                </value>
                <value>
                    <fullName>Royal Salute 21 Years</fullName>
                </value>
                <value>
                    <fullName>Royal Salute 62 Guns Salute</fullName>
                </value>
                <value>
                    <fullName>Royal Salute 38 Stone of Destiny</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 12 Years</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 15 Years</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 18 Years</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet 25 Years</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker Black Label</fullName>
                </value>
                <value>
                    <fullName>Johnnie Walker Blue Label</fullName>
                </value>
                <value>
                    <fullName>Martell VSOP</fullName>
                </value>
                <value>
                    <fullName>Martell Cordon Bleu</fullName>
                </value>
                <value>
                    <fullName>Martell XO</fullName>
                </value>
                <value>
                    <fullName>Martell Chanteloup Perspective</fullName>
                </value>
                <value>
                    <fullName>Martell Creation Grand Extra</fullName>
                </value>
                <value>
                    <fullName>Martell Cohiba</fullName>
                </value>
                <value>
                    <fullName>L&apos;or De Jean Martell</fullName>
                </value>
                <value>
                    <fullName>Hennessy VSOP</fullName>
                </value>
                <value>
                    <fullName>Hennessy XO</fullName>
                </value>
                <value>
                    <fullName>Hennessy Prive</fullName>
                </value>
                <value>
                    <fullName>Richard Hennessy</fullName>
                </value>
                <value>
                    <fullName>Remy-Martin VSOP</fullName>
                </value>
                <value>
                    <fullName>Remy-Martin XO</fullName>
                </value>
                <value>
                    <fullName>Remy-Martin Louis XIII</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet</fullName>
                </value>
                <value>
                    <fullName>GH Mumms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Car_Brand_Other__c</fullName>
        <label>Preferred Car Brand (Other)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Car_Brand__c</fullName>
        <label>Preferred Car Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aston Martin</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Ferrari</fullName>
                </value>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
                <value>
                    <fullName>Lamborghini</fullName>
                </value>
                <value>
                    <fullName>Lexgen</fullName>
                </value>
                <value>
                    <fullName>Lexus</fullName>
                </value>
                <value>
                    <fullName>Maserati</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>McLaren</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Porsche</fullName>
                </value>
                <value>
                    <fullName>Range Rover</fullName>
                </value>
                <value>
                    <fullName>Rolls Royce</fullName>
                </value>
                <value>
                    <fullName>Volkswagon</fullName>
                </value>
                <value>
                    <fullName>Volvo</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Contact_Number__c</fullName>
        <label>Preferred Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Fashion_Brand_Other__c</fullName>
        <label>Preferred Fashion Brand (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Fashion_Brand__c</fullName>
        <label>Preferred Fashion Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alfred Dunhill</fullName>
                </value>
                <value>
                    <fullName>Bottega Veneta</fullName>
                </value>
                <value>
                    <fullName>Brioni</fullName>
                </value>
                <value>
                    <fullName>Celine</fullName>
                </value>
                <value>
                    <fullName>Chanel</fullName>
                </value>
                <value>
                    <fullName>Chloe</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Ermenegildo Zegna</fullName>
                </value>
                <value>
                    <fullName>Ferragamo</fullName>
                </value>
                <value>
                    <fullName>Fendi</fullName>
                </value>
                <value>
                    <fullName>Giorgio Armani</fullName>
                </value>
                <value>
                    <fullName>Hermes</fullName>
                </value>
                <value>
                    <fullName>Lanvin</fullName>
                </value>
                <value>
                    <fullName>Prada</fullName>
                </value>
                <value>
                    <fullName>Raph Lauren</fullName>
                </value>
                <value>
                    <fullName>Valentino</fullName>
                </value>
                <value>
                    <fullName>Versace</fullName>
                </value>
                <value>
                    <fullName>YSL</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Language_1__c</fullName>
        <label>Preferred Language 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>